fix an alignment issue for picture-in-picture window of the pomodoro timer.

--- a/pomodoro-timer/css/style.css
+++ b/pomodoro-timer/css/style.css
@@ -121,6 +121,14 @@ body {
   }
 }
 
+.pipBody {
+  padding-top: 0;
+}
+
+.pipBody .vertical-center {
+  min-height: 100vh;
+}
+
 .overlay {
   position: absolute;
   top: 0;
